@@ -1,23 +1,12 @@
 FROM jelastic/maven:3.9.5-openjdk-21 AS build
-
-# Set the working directory in the image
 WORKDIR /app
-
-# Copy pom.xml and source code to the container
 COPY pom.xml .
 COPY src ./src
+RUN mvn -q -DskipTests clean package
 
-# Package the application
-RUN mvn clean install -DskipTests
-
-# Use openjdk 21 for running the application
-FROM openjdk:21-jdk-slim
-
-# Copy the jar file from the build stage
+FROM eclipse-temurin:21-jre-jammy
+WORKDIR /opt/app
 COPY --from=build /app/target/eureka-server-0.0.1-SNAPSHOT.jar app.jar
 
-# Expose the application's port
-EXPOSE 8080
-
-# Run the application
-ENTRYPOINT ["java","-jar","/app.jar"]
+EXPOSE 8761
+ENTRYPOINT ["java","-XX:+AlwaysPreTouch","-XX:+UseZGC","-Xms256m","-Xmx512m","-jar","app.jar"]
